--- a/index.html
+++ b/index.html
@@ -5,84 +5,111 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="header-title">
+      <nav class="navigation">
+        <a class="link logotype" href="./index.html"
+          ><span class="logotype-web">Web</span>Studio</a
+        >
+        <ul class="list">
+          <li class="navigation-item">
+            <a class="link navigation-link" href="./index.html">Studio</a>
+          </li>
+          <li class="navigation-item">
+            <a class="link navigation-link" href="./portfolio.html"
+              >Portfolio</a
+            >
+          </li>
+          <li class="navigation-item">
+            <a class="link navigation-link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="address">
+        <ul class="list">
+          <li class="address-item">
+            <a
+              class="link address-link mail-active"
+              href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="address-item">
+            <a class="link address-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-button">Order Service</button>
       </section>
-      <section>
-        <h2>Our goal and values</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="values">
+        <h2 class="visually-hidden">Our values</h2>
+        <ul class="list">
+          <li class="values-item">
+            <h3 class="values-subtitle">Strategy</h3>
+            <p class="chapter-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="values-item">
+            <h3 class="values-subtitle">Punctuality</h3>
+            <p class="chapter-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="values-item">
+            <h3 class="values-subtitle">Diligence</h3>
+            <p class="chapter-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="values-item">
+            <h3 class="values-subtitle">Technologies</h3>
+            <p class="chapter-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
+      <section class="activity">
+        <h2 class="chapter-title">What are we doing</h2>
+        <ul class="list">
+          <li class="activity-item">
             <img
-              src="./images/img-1.jpg"
+              src="./images/main-page-images/img-1.jpg"
               alt="a white monitor"
               width="360"
               height="300"
             />
           </li>
-          <li>
+          <li class="activity-item">
             <img
-              src="./images/img-2.jpg"
+              src="./images/main-page-images/img-2.jpg"
               alt="a mobile phone"
               width="360"
               height="300"
             />
           </li>
-          <li>
+          <li class="activity-item">
             <img
-              src="./images/img-3.jpg"
+              src="./images/main-page-images/img-3.jpg"
               alt="a mobile phone and a laptop"
               width="360"
               height="300"
@@ -90,55 +117,58 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="chapter-title">Our Team</h2>
+        <ul class="list">
+          <li class="team-item">
             <img
-              src="./images/person-1.jpg"
+              src="./images/main-page-images/person-1.jpg"
               alt="photo of Mark Guerrero"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="chapter-subtitle team-align">Mark Guerrero</h3>
+            <p class="chapter-text team-align">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
-              src="./images/person-2.jpg"
+              src="./images/main-page-images/person-2.jpg"
               alt="photo of Tom Ford"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="chapter-subtitle team-align">Tom Ford</h3>
+            <p class="chapter-text team-align">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
-              src="./images/person-3.jpg"
+              src="./images/main-page-images/person-3.jpg"
               alt="photo of Camila Garcia"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="chapter-subtitle team-align">Camila Garcia</h3>
+            <p class="chapter-text team-align">Marketing</p>
           </li>
           <li>
             <img
-              src="./images/person-4.jpg"
+              src="./images/main-page-images/person-4.jpg"
               alt="photo of Daniel Wilson"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="chapter-subtitle team-align">Daniel Wilson</h3>
+            <p class="chapter-text team-align">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="page-end">
+      <a class="logotype link" href="./index.html">
+        <span class="logotype-web">Web</span>
+        <span class="logotype-studio-down">Studio</span>
+      </a>
+      <p class="page-end-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
