Edit styles.css and portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,9 +34,7 @@
       <address>
         <ul class="list">
           <li>
-            <a
-              class="address-link mail-active link"
-              href="mailto:info@devstudio.com"
+            <a class="address-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
@@ -50,17 +48,17 @@
     </header>
     <main>
       <section>
-        <h1 hidden>Portfolio</h1>
-        <h2 hidden>Portfolio menu</h2>
+        <h1 class="visually-hidden">Portfolio</h1>
+        <h2 class="visually-hidden">Portfolio menu</h2>
         <ul class="list">
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+          <li><button class="menu-button" type="button">All</button></li>
+          <li><button class="menu-button" type="button">Web Site</button></li>
+          <li><button class="menu-button" type="button">App</button></li>
+          <li><button class="menu-button" type="button">Design</button></li>
+          <li><button class="menu-button" type="button">Marketing</button></li>
         </ul>
         <ul class="list">
-          <li>
+          <li class="portfolio-menu-item">
             <a class="link" href="">
               <img
                 src="./images/portfolio-images/portfolio-banking-app-interface-concept.jpg"
@@ -68,11 +66,11 @@
                 width="360"
                 height="300"
               />
-              <h3>Banking App Interface Concept</h3>
-              <p>App</p>
+              <h3 class="chapter-subtitle">Banking App Interface Concept</h3>
+              <p class="chapter-text">App</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-menu-item">
             <a class="link" href="">
               <img
                 src="./images/portfolio-images/portfolio-cashless-payment.jpg"
@@ -80,11 +78,11 @@
                 width="360"
                 height="300"
               />
-              <h3>Cashless Payment</h3>
-              <p>Marketing</p>
+              <h3 class="chapter-subtitle">Cashless Payment</h3>
+              <p class="chapter-text">Marketing</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-menu-item">
             <a class="link" href="">
               <img
                 src="./images/portfolio-images/portfolio-meditation-app.jpg"
@@ -92,11 +90,11 @@
                 width="360"
                 height="300"
               />
-              <h3>Meditation App</h3>
-              <p>App</p>
+              <h3 class="chapter-subtitle">Meditation App</h3>
+              <p class="chapter-text">App</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-menu-item">
             <a class="link" href="">
               <img
                 src="./images/portfolio-images/portfolio-taxi-service.jpg"
@@ -104,11 +102,11 @@
                 width="360"
                 height="300"
               />
-              <h3>Taxi Service</h3>
-              <p>Marketing</p>
+              <h3 class="chapter-subtitle">Taxi Service</h3>
+              <p class="chapter-text">Marketing</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-menu-item">
             <a class="link" href="">
               <img
                 src="./images/portfolio-images/portfolio-screen-illustrations.jpg"
@@ -116,11 +114,11 @@
                 width="360"
                 height="300"
               />
-              <h3>Screen Illustrations</h3>
-              <p>Design</p>
+              <h3 class="chapter-subtitle">Screen Illustrations</h3>
+              <p class="chapter-text">Design</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-menu-item">
             <a class="link" href="">
               <img
                 src="./images/portfolio-images/portfolio-online-courses.jpg"
@@ -128,11 +126,11 @@
                 width="360"
                 height="300"
               />
-              <h3>Online Courses</h3>
-              <p>Marketing</p>
+              <h3 class="chapter-subtitle">Online Courses</h3>
+              <p class="chapter-text">Marketing</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-menu-item">
             <a class="link" href="">
               <img
                 src="./images/portfolio-images/portfolio-instagram-stories-concept.jpg"
@@ -140,11 +138,11 @@
                 width="360"
                 height="300"
               />
-              <h3>Instagram Stories Concept</h3>
-              <p>Design</p>
+              <h3 class="chapter-subtitle">Instagram Stories Concept</h3>
+              <p class="chapter-text">Design</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-menu-item">
             <a class="link" href="">
               <img
                 src="./images/portfolio-images/portfolio-organic-food.jpg"
@@ -152,11 +150,11 @@
                 width="360"
                 height="300"
               />
-              <h3>Organic Food</h3>
-              <p>Web Site</p>
+              <h3 class="chapter-subtitle">Organic Food</h3>
+              <p class="chapter-text">Web Site</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-menu-item">
             <a class="link" href="">
               <img
                 src="./images/portfolio-images/portfolio-fresh-coffee.jpg"
@@ -164,8 +162,8 @@
                 width="360"
                 height="300"
               />
-              <h3>Fresh Coffee</h3>
-              <p>Web Site</p>
+              <h3 class="chapter-subtitle">Fresh Coffee</h3>
+              <p class="chapter-text">Web Site</p>
             </a>
           </li>
         </ul>
