Edit styles.css, index.html, portfolio.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header-title">
       <nav class="navigation">
         <a class="link logotype" href="./index.html"
-          ><span class="logotype-web">Web</span>Studio</a
+          >Web<span class="logotype-studio-up">Studio</span></a
         >
         <ul class="list">
           <li class="navigation-item">
@@ -36,9 +36,7 @@
       <address class="address">
         <ul class="list">
           <li class="address-item">
-            <a
-              class="link address-link mail-active"
-              href="mailto:info@devstudio.com"
+            <a class="link address-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
@@ -56,31 +54,31 @@
         <button type="button" class="hero-button">Order Service</button>
       </section>
       <section class="values">
-        <h2 class="visually-hidden">Our values</h2>
+        <h2 hidden>Our values</h2>
         <ul class="list">
           <li class="values-item">
-            <h3 class="values-subtitle">Strategy</h3>
+            <h3 class="chapter-subtitle">Strategy</h3>
             <p class="chapter-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="values-item">
-            <h3 class="values-subtitle">Punctuality</h3>
+            <h3 class="chapter-subtitle">Punctuality</h3>
             <p class="chapter-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="values-item">
-            <h3 class="values-subtitle">Diligence</h3>
+            <h3 class="chapter-subtitle">Diligence</h3>
             <p class="chapter-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="values-item">
-            <h3 class="values-subtitle">Technologies</h3>
+            <h3 class="chapter-subtitle">Technologies</h3>
             <p class="chapter-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -150,7 +148,7 @@
             <h3 class="chapter-subtitle team-align">Camila Garcia</h3>
             <p class="chapter-text team-align">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/main-page-images/person-4.jpg"
               alt="photo of Daniel Wilson"
@@ -165,7 +163,7 @@
     </main>
     <footer class="page-end">
       <a class="logotype link" href="./index.html">
-        <span class="logotype-web">Web</span>
+        Web
         <span class="logotype-studio-down">Studio</span>
       </a>
       <p class="page-end-text">
