--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <header>
       <nav>
         <a class="logotype link" href="./index.html"
-          ><span class="logotype-web">Web</span>Studio</a
+          >Web<span class="logotype-studio">Studio</span></a
         >
         <ul class="list">
           <li>
@@ -31,7 +31,7 @@
           <li><a class="navigation-link link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul class="list">
           <li>
             <a class="address-link link" href="mailto:info@devstudio.com"
@@ -48,8 +48,7 @@
     </header>
     <main>
       <section>
-        <h1 class="visually-hidden">Portfolio</h1>
-        <h2 class="visually-hidden">Portfolio menu</h2>
+        <h1 hidden>Portfolio</h1>
         <ul class="list">
           <li><button class="menu-button" type="button">All</button></li>
           <li><button class="menu-button" type="button">Web Site</button></li>
@@ -66,7 +65,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="chapter-subtitle">Banking App Interface Concept</h3>
+              <h2 class="chapter-subtitle">Banking App Interface Concept</h2>
               <p class="chapter-text">App</p>
             </a>
           </li>
@@ -78,7 +77,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="chapter-subtitle">Cashless Payment</h3>
+              <h2 class="chapter-subtitle">Cashless Payment</h2>
               <p class="chapter-text">Marketing</p>
             </a>
           </li>
@@ -90,7 +89,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="chapter-subtitle">Meditation App</h3>
+              <h2 class="chapter-subtitle">Meditation App</h2>
               <p class="chapter-text">App</p>
             </a>
           </li>
@@ -102,7 +101,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="chapter-subtitle">Taxi Service</h3>
+              <h2 class="chapter-subtitle">Taxi Service</h2>
               <p class="chapter-text">Marketing</p>
             </a>
           </li>
@@ -114,7 +113,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="chapter-subtitle">Screen Illustrations</h3>
+              <h2 class="chapter-subtitle">Screen Illustrations</h2>
               <p class="chapter-text">Design</p>
             </a>
           </li>
@@ -126,7 +125,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="chapter-subtitle">Online Courses</h3>
+              <h2 class="chapter-subtitle">Online Courses</h2>
               <p class="chapter-text">Marketing</p>
             </a>
           </li>
@@ -138,7 +137,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="chapter-subtitle">Instagram Stories Concept</h3>
+              <h2 class="chapter-subtitle">Instagram Stories Concept</h2>
               <p class="chapter-text">Design</p>
             </a>
           </li>
@@ -150,7 +149,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="chapter-subtitle">Organic Food</h3>
+              <h2 class="chapter-subtitle">Organic Food</h2>
               <p class="chapter-text">Web Site</p>
             </a>
           </li>
@@ -162,7 +161,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="chapter-subtitle">Fresh Coffee</h3>
+              <h2 class="chapter-subtitle">Fresh Coffee</h2>
               <p class="chapter-text">Web Site</p>
             </a>
           </li>
