--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <header>
       <nav>
         <a class="logotype link" href="./index.html"
-          >Web<span class="logotype-studio">Studio</span></a
+          >Web<span class="logotype-studio-up">Studio</span></a
         >
         <ul class="list">
           <li>
