Update styles.css, index.html, portfolio.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <button type="button" class="hero-button">Order Service</button>
       </section>
       <section class="values">
-        <h2 hidden>Our values</h2>
+        <h2 hidden class="chapter-title">Our values</h2>
         <ul class="list">
           <li class="values-item">
             <h3 class="chapter-subtitle">Strategy</h3>
