--- a/portfolio.html
+++ b/portfolio.html
@@ -170,8 +170,7 @@
     </main>
     <footer class="page-end">
       <a class="logotype link" href="./index.html"
-        ><span class="logotype-web">Web</span
-        ><span class="logotype-studio-down">Studio</span></a
+        >Web <span class="logotype-studio-down">Studio</span></a
       >
       <p class="page-end-text">
         Increase the flow of customers and sales for your business with digital
